# trabalho-redes-neurais

./: README.md  Trabalho_Redes_Neurais.ipynb  main.py  pyproject.toml
